# learnings

./: gtest.txt  misc.txt  valgrind_massif.txt  vim.txt  vscode.txt
bashprogramming/: build_in_var.sh  case.sh  debugging.sh  debugging_xv.sh  exit_status.sh  for_lopp.sh  function.sh  if_then.sh  index.html  index.html.1  logeer.sh  myscript.sh  positional_parameters.sh  read.sh  variable.sh  while.sh  while1.sh  while_read.sh  while_read.txt  wildcard.sh
bashprogramming/change_name_demo/: change_name.sh
bashprogramming/docs/: basics.md
c/: a.out  oprator.c  print_pattern.c  swap.c
c++/: MyHeader.cpp  a.out
c/array/: a.out  move_given_element.c  print_elements.c  print_no_of_occurance_of_elements.c  remove_element.c
c/array_string_code/: a.out  print_duplicate_from_string.c  print_freq_in_array.c  print_freq_of_elements_string.c  remove_dup_from_array.c  remove_duplicates_from_string.c
c/basics/: a.out  check_endianess.c  if_while.c  little_big.c  underfined.c
c/linkedlist/: a.out  list.c
c/loops/: a.out  break_cont.c
c/simple_logic/: a.out  base_conversion.c  divisible_11.c  divisible_9.c  fabonaci.c  prime_factor.c  prime_nums.c  sum_of_digits.c
c/string/: 2D_char_Array.c  a.out  char_array.c  reverse_string.c
c/struct/: a.out  const_member.c  struct_malloc.c
c/switch/: a.out  switch.c
cmake/doc/: basics.md  cache_variables.md  cmake.txt  control_flow.md  script_mode_mod4.md
cmake/make_demo/: calc.cpp  div.cpp  main.cpp  makefile  print.cpp
cmake/module2/: CMakeLists.txt  add.cpp
cmake/module3/: CMakeLists.txt  main.cpp
cmake/module3/math_dir/: CMakeLists.txt
cmake/module3/math_dir/src/: div.cpp
cmake/module3/print_dir/: CMakeLists.txt
cmake/module3/print_dir/include/my_print/: print.hpp
cmake/module3/print_dir/src/: print.cpp
cmake/module4/: CMakeLists.txt  list.txt  manupulate_cmake_var.txt  quated_and_unquated.txt
cmake/module5/functions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/module5/functions/sub_dir/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/module5/if_else/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/module5/looping/: CMakeLists.txt
cmake/module5/macro/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt
cmake/module6/: CMakeLists.txt
cmake/module6/math_dir/: CMakeLists.txt
cmake/module6/math_dir/include/my_math/: add.hpp
cmake/module6/math_dir/src/: add.cpp
cmake/module7/: CMakeLists.txt
cmake/module7/math_dir/: CMakeLists.txt
cpp/: a.out  const_constexpr.cpp  is_present_lambda.cpp
cpp/docs/: references.md
cpp/docs/constructor/: copy_assignment_operator.md  copy_constructor.md  default_constructor.md  move_constructor.md  overview.md
cpp/docs/exception_handling/: C++_std_library_exception_class_hierarchy.md  basics.md
cpp/docs/other_features/: Rvalue.md
cpp/docs/smart_pointer/: shared_pointer.md  unique_pointer.md  weak_pointer.md
cpp/docs/templates/: deque.md  lists.md  maps.md  priority_queue.md  queue.md  sets.md  stack.md  vector.md
cpp/gcov/: a.out  greatest_num.hpp  main  main_coverage.info  main_test.cpp  main_test.gcda
cpp/hackerRank/: a.out  attributeparser.cpp  box.cpp  class.cpp  class.gcno  foor_loop.cpp  minMaxSum.cpp  pattern#1.cpp  timeconversion.cpp
cpp/moderCpp/: a.out  auto_chrono.cpp  constexpr_and_static_assert.cpp  depricated.cpp  variable_template.cpp
cpp/multi_thread/: a.out  main.cpp
cpp/pj1/: a.cpp  a.h  main.cpp
cpp/pj2/: a.out  header.h  main.cpp
cpp/quarantine/constructor/: Constructor.cpp  DefaultConstructor.cpp  DeleteDefaultConstructor.cpp  NoDefaultConstructor.cpp  ParameterizedConstructorNameAmbiguty.cpp  ParameterizedDefaultConstructor.cpp  a.out
cpp/quarantine/constructor/demo/: CompilerGernerated.cpp  MoveConstructorAssignmentOperator.cpp  a.out
cpp/quarantine/exception/: ClassLevelUserDefinedExceptions.cpp  Exception.cpp  STDExceptionClass.cpp  StackUnwinding.cpp  a.out
cpp/quarantine/smart_pointers/include/: testclass.hpp
cpp/quarantine/smart_pointers/source/: SharedPointer.cpp  UniqePointer.cpp  WeakPointer.cpp  a.out
cpp/quarantine/template/STL/: Deque.cpp  ForwandLists.cpp  Lists.cpp  Map.cpp  Set.cpp  Vector.cpp  VectorUnique.cpp  a.out
cpp/quarantine/template/function_template/: FunctionTemplate.cpp  PersonClass.hpp  a.out
cpp/quarantine/valgrind/: a.out  massif.out.4879  test1.cpp
cpp/samples/: Myclass.cpp  a.out  abs.cpp  array_of_fun_ptr.cpp  array_of_string.cpp  assign_function.cpp  copy_constructor.cpp  enum.cpp  find_if.cpp  for_loop.cpp  fun_arg1.c  set_insertion.cpp  size_of_2d_vector.cpp  temp.cpp  virtual.cpp
cpp/string/: a.out  string.cpp
cpp/try_and_error/: SwapMemberFunction.cpp  a.out  attributeparser.cpp  auto_ref.cpp  class_vector_range_based.cpp  compare_vector.cpp  empty_vector.cpp  field_rx.cpp  friend_class.cpp  fun_arg.c  keywords.cpp  lamda.cpp  output.cpp  redeclaration.cpp  ref_qualifier.cpp  sequence.cpp  static_init_template_class.hpp  temp.cpp  template_enableif_non_trivial.cpp  test_stop_service_pair_vector.cpp  uninitialized_int.cpp  vector_begin.cpp
docs/: qnx_basics.txt
gcov/: gcov.txt  main.cpp  main_test.gcno
git/docs/: SignOffExistingCommits.md  git.txt  git_commands.txt
system_programming/: a.out  acl.txt  bash.txt  byte_address.txt  facts.txt  fork.c  ipc.txt  iptr_cptr_carr.c  linuxCommands.txt  local_ptr.c  signals.txt  tread.txt
